Fixed overlapping issue in lesson 8

--- a/level1-B/lesson-08/main.scss
+++ b/level1-B/lesson-08/main.scss
@@ -18,8 +18,14 @@
 
 .html-lesson-wrapper .see-content .blue-section {
     width: 100% !important;
+    .row{
+        .col{
+            margin-right: 0.5em !important;
+        }
+    }
 }
 
 .html-lesson-wrapper .see-content {
     width: 90% !important;
 }
+
